--- a/res/layout/setup_locale.xml
+++ b/res/layout/setup_locale.xml
@@ -31,7 +31,7 @@
                     android:paddingLeft="@dimen/content_margin_left"
                     android:paddingRight="@dimen/content_margin_left">
 
-        <org.lineageos.setupwizard.widget.LocalePicker
+        <org.calyxos.setupwizard.widget.LocalePicker
             android:id="@+id/locale_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
