--- a/res/layout-television/welcome_activity.xml
+++ b/res/layout-television/welcome_activity.xml
@@ -24,7 +24,7 @@
             android:layout_height="0dp"
             android:layout_weight="65"
             android:layout_gravity="center"
-            android:src="@drawable/logo"
+            android:src="@drawable/calyx_logo_no_text"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:gravity="center"
