--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -30,10 +30,10 @@
             <ImageView
                 android:id="@+id/brand_logo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="128dp"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo" />
+                android:scaleType="fitCenter"
+                android:src="@drawable/calyx_logo_no_text" />
 
             <Space
                 android:layout_width="match_parent"
