--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -4,5 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
+    <color name="calyx_logo_accent">#FFFFFF</color>
+
     <color name="divider">#40ffffff</color>
 </resources>
