--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -39,11 +39,11 @@
                 android:id="@+id/brand_logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/logo"
+                android:src="@drawable/calyx_logo"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 android:gravity="center"
-                android:padding="@dimen/content_margin_left" />
+                android:padding="60dp" />
 
             <Button
                 android:id="@+id/start"
