--- a/res/layout-large-notouch/welcome_activity.xml
+++ b/res/layout-large-notouch/welcome_activity.xml
@@ -41,7 +41,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="80"
                 android:layout_gravity="center"
-                android:src="@drawable/logo"
+                android:src="@drawable/calyx_logo"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 android:gravity="center"
