--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -15,6 +15,13 @@
      limitations under the License.
 -->
 <resources>
+    <!-- App install -->
+    <string name="calyx_fdroid_repo_location" translatable="false">/product/fdroid/repo</string>
+    <string name="install_apps_title">Additional apps</string>
+    <string name="install_apps_subtitle"><b>Review additional apps.</b> You can install them later as well.</string>
+    <string name="install_apps_select_all">All of the following apps</string>
+    <string name="waiting_for_apps">Please wait while we finish setting up your device.</string>
+
     <!-- MicroG setup -->
     <string name="microg_title">Google Services</string>
     <string name="microg_description">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
