--- a/res/layout/finish_activity.xml
+++ b/res/layout/finish_activity.xml
@@ -42,6 +42,23 @@
             android:gravity="center"
             android:padding="60dp"/>
 
+        <TextView
+            android:id="@+id/waiting_for_apps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/waiting_for_apps"
+            android:gravity="center"
+            android:visibility="gone"/>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:indeterminateOnly="true"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_gravity="top"
+            android:visibility="gone"/>
+
         <org.lineageos.setupwizard.NavigationLayout
             android:id="@+id/navigation_bar"
             android:layout_width="match_parent"
