Replace Calyx' raster PNG logo with vector logo

--- a/res/layout/finish_activity.xml
+++ b/res/layout/finish_activity.xml
@@ -36,11 +36,11 @@
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1"
-            android:src="@drawable/logo"
+            android:src="@drawable/calyx_logo"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:gravity="center"
-            android:padding="@dimen/content_margin_left"/>
+            android:padding="48dp"/>
 
         <com.google.android.setupdesign.view.NavigationBar
             android:id="@+id/navigation_bar"
