Add step for enabling/disabling microG
Co-authored-by: Aayush Gupta <aayushgupta219@gmail.com>
Co-authored-by: Chirayu Desai <chirayudesai1@gmail.com>
Co-authored-by: Michael Bestas <mkbestas@gmail.com>
Co-authored-by: Oliver Scott <olivercscott@gmail.com>
Co-authored-by: Tommy Webb <tommy@calyxinstitute.org>
Change-Id: I44130cd02fb0781ddb565a448085c035754b5e8d

--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -5,6 +5,7 @@
 -->
 <resources>
     <color name="calyx_logo_accent">#FFFFFF</color>
+    <color name="microg_logo_accent">#ffffff</color>
 
     <color name="divider">#40ffffff</color>
 </resources>
