--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -22,6 +22,12 @@
     <string name="install_apps_select_all">All of the following apps</string>
     <string name="waiting_for_apps">Please wait while we finish setting up your device.</string>
 
+    <!-- MicroG setup -->
+    <string name="microg_title">Google Services</string>
+    <string name="microg_description">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
+    <string name="microg_switch_label">Enable Google Services Compatibility</string>
+    <string name="microg_warning">Note: If you enable this now, your phone will be set up to send data to Google.  You can change this later in the microG settings.</string>
+
     <!-- Backup Restore -->
     <string name="calyx_intro_restore_subtitle">If you have a backup from your last Calyx phone, you can restore it here.</string>
 </resources>
