Fix scrolling and force scrolling when pressing Next
This removes the nested scrolling and thus improves scrolling
performance and restores the possibility to fling the list.

Also, it simplifies the complicated deep layout hierachy which is
generally bad for performance as well.

--- a/res/layout/list_item_app.xml
+++ b/res/layout/list_item_app.xml
@@ -6,8 +6,8 @@
     android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     android:paddingTop="16dp"
-    android:paddingLeft="@dimen/content_margin_left"
-    android:paddingRight="@dimen/data_switch_margin_right">
+    android:paddingStart="@dimen/content_margin_left"
+    android:paddingEnd="@dimen/data_switch_margin_right">
 
     <LinearLayout
         android:layout_width="match_parent"
