--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
     android:orientation="vertical"
-    tools:context=".MicroGActivity">
+    tools:context=".apps.MicroGActivity">
 
     <include layout="@layout/header_condensed" />
 
@@ -83,6 +84,18 @@
                     android:text="@string/microg_warning"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+                <include layout="@layout/divider" />
+
+                <!-- Not shown right now, kept for code reuse and simplicity -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/list_item_app"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </ScrollView>
