Fix broken translations
Change-Id: I70cb99e1d987a51530c26feb34433dba1dfd3ecd

--- a/res/values-hr/calyx_strings.xml
+++ b/res/values-hr/calyx_strings.xml
@@ -5,10 +5,10 @@
     <string name="intro_restore_title">Obnovi aplikacije i podatke</string>
     <string name="microg_warning">Napomena: Ako se ovo uključi, telefon će biti postavljen tako da šalje podatke Googleu. To se može kasnije promijeniti u postavkama microG-a.</string>
     <string name="microg_switch_label">Uključi kompatibilnost Googleovih usluga</string>
-    <string name="microg_description">Ovo omogućuje pokretanje aplikacija kao što su &lt;b&gt;Google karte, Youtube i usluge dijeljenja vožnje&lt;/b&gt; na CalyxOS-u. Isključi ako ne misliš pokretati aplikacije koje zahtijevaju Googleove usluge. Kasnije se ne može uključiti.<b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
+    <string name="microg_description">Ovo omogućuje pokretanje aplikacija kao što su <b>Google karte, Youtube i usluge dijeljenja vožnje</b> na CalyxOS-u. Isključi ako ne misliš pokretati aplikacije koje zahtijevaju Googleove usluge. Kasnije se ne može uključiti.</string>
     <string name="microg_title">Google usluge</string>
     <string name="waiting_for_apps">Pričekaj da završimo s postavljanjem uređaja.</string>
     <string name="install_apps_select_all">Sve sljedeće aplikacije</string>
-    <string name="install_apps_subtitle">&lt;b&gt;Pregledaj dodatne aplikacije.&lt;/b&gt; Mogu se instalirati i kasnije.<b>Review additional apps.</b> You can install them later as well.</string>
+    <string name="install_apps_subtitle"><b>Pregledaj dodatne aplikacije.</b> Mogu se instalirati i kasnije.</string>
     <string name="install_apps_title">Dodatne aplikacije</string>
 </resources>
