--- a/res/values-pt/calyx_strings.xml
+++ b/res/values-pt/calyx_strings.xml
@@ -5,10 +5,10 @@
     <string name="intro_restore_title">Restaurar apps e dados</string>
     <string name="microg_warning">Nota: se ativar isto agora, o seu aparelho estará configurado para enviar dados ao Google. Pode alterar isso mais tarde nas configurações do microG.</string>
     <string name="microg_switch_label">Ativar Compatibilidade de Serviços do Google</string>
-    <string name="microg_description">Isso permite que apps como &lt;b&gt;Google Maps, Youtube e serviços de compartilhamento de passeios&lt;/b&gt; funcionem no CalyxOS. Desative esta opção se não planea executar apps que requerem os serviços do Google.<b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
+    <string name="microg_description">Isso permite que apps como <b>Google Maps, Youtube e serviços de compartilhamento de passeios</b> funcionem no CalyxOS. Desative esta opção se não planea executar apps que requerem os serviços do Google.</string>
     <string name="microg_title">Serviços Google</string>
     <string name="waiting_for_apps">Aguarde enquanto terminamos de configurar o seu aparelho.</string>
     <string name="install_apps_select_all">Todos os seguintes apps</string>
-    <string name="install_apps_subtitle">&lt;b&gt;Avaliar as apps adicionais.&lt;/b&gt; Também pode instalá-los mais tarde.<b>Review additional apps.</b> You can install them later as well.</string>
+    <string name="install_apps_subtitle"><b>Avaliar as apps adicionais.</b> Também pode instalá-los mais tarde.</string>
     <string name="install_apps_title">Apps adicionais</string>
 </resources>
