--- a/res/values-ru/calyx_strings.xml
+++ b/res/values-ru/calyx_strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="intro_restore_button">Восстановить из резервной копии</string>
-    <string name="install_apps_subtitle">&lt;b&gt;Просмотрите дополнительные приложения.&lt;/b&gt; Вы также можете установить их позже.<b>Review additional apps.</b> You can install them later as well.</string>
+    <string name="install_apps_subtitle"><b>Просмотрите дополнительные приложения.</b> Вы также можете установить их позже.</string>
     <string name="intro_restore_subtitle">Если у вас есть резервная копия с вашего последнего телефона Calyx, вы можете восстановить ее здесь.</string>
     <string name="intro_restore_title">Восстановить приложения и данные</string>
     <string name="microg_warning">Примечание. Если вы включите это сейчас, ваш телефон будет настроен на отправку данных в Google. Вы можете изменить это позже в настройках microG.</string>
