Point to our own string for restore activity subtitle
Change-Id: I94061f5af2dda5dff49bb2b39c37efd5108738f7

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -15,4 +15,6 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Backup Restore -->
+    <string name="calyx_intro_restore_subtitle">If you have a backup from your last Calyx phone, you can restore it here.</string>
 </resources>
