Fix icon sizes for app install page
* centerInside made them too small,
  fitCenter makes it look like it should have
* Keep using icons-640 since while they're the biggest,
  the max size there is only 192x192

Change-Id: I44def6a942bbde485281dd819e28366c10dd367f

--- a/res/layout/list_item_app.xml
+++ b/res/layout/list_item_app.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/icon"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 tools:ignore="ContentDescription"
                 tools:src="@drawable/ic_launcher_background" />
         </LinearLayout>
