Add step for warning about the bootloader lock status
Change-Id: I50dca8db8c8748843a894a9c0dbcd9d9a90d110b

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -30,4 +30,10 @@
 
     <!-- Backup Restore -->
     <string name="calyx_intro_restore_subtitle">If you have a backup from your last Calyx phone, you can restore it here.</string>
+
+    <!-- Bootloader Lock Status -->
+    <string name="bootloader_warning_title">Bootloader warning</string>
+    <string name="bootloader_warning_summary">This device\'s bootloader is currently unlocked. Please lock the bootloader</string>
+
+    <string name="reboot">Reboot</string>
 </resources>
